syntax = "proto3";

package HospitalTest;

option java_package = "com.proto.HospitalTest";
option java_multiple_files = true;

message HospitalTest {}
message HospitalService {}